# emailenv

./: .dockerignore  .env  Dockerfile  README.md  __init__.py  baseline.py  baseline_results.json  client.py  demo.py  demo_results.json  emailenv_class.py  graders.py  helpdeskenv_class.py  inference.py  knowledge_base.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  run.py  server.py  tasks.py  test_import.py  test_multiagent.py
agents/: __init__.py  l1_agent.py  l2_agent.py  l3_agent.py  triage.py
server/: __init__.py  app.py
