[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "helpdeskenv"
version = "2.0.0"
description = "Multi-agent IT Helpdesk environment with self-improving Knowledge Base."
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
    { name = "EmailEnv Contributors", email = "support@example.com" }
]
dependencies = [
    "pydantic>=2.6.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "openai>=1.0.0",
    "requests>=2.31.0",
    "openenv-core>=0.2.0"
]

[project.optional-dependencies]
inference = [
    "openai>=1.0.0"
]
dev = [
    "pytest",
    "httpx"
]

[project.urls]
Homepage = "https://huggingface.co/spaces/your-organization/emailenv"
Repository = "https://github.com/HR5206/emailenv"


[project.scripts]
server = "server.app:main"
emailenv-server = "server.app:main"

[project.entry-points."emailenv.graders"]
spam_classification = "graders:grade_spam"
email_prioritization = "graders:grade_priority"
reply_generation = "graders:grade_reply"
