[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "helpdeskenv"
version = "2.0.0"
description = "Multi-agent IT Helpdesk environment with self-improving Knowledge Base."
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
    { name = "HelpdeskEnv Contributors", email = "harishraghav256@gmail.com" }
]
dependencies = [
    "pydantic>=2.6.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "openai>=1.0.0",
    "requests>=2.31.0",
    "openenv-core>=0.2.0"
]

[project.optional-dependencies]
inference = [
    "openai>=1.0.0"
]
dev = [
    "pytest",
    "httpx"
]

[project.urls]
Homepage = "https://huggingface.co/spaces/Harishraghav-05/helpdeskenv"
Repository = "https://github.com/HR5206/emailenv"


[project.scripts]
server = "server.app:main"

[project.entry-points."helpdeskenv.graders"]
ticket_triage = "graders:grade_triage"
ticket_resolution = "graders:grade_reply"
kb_contribution = "graders:grade_kb_contribution"
